// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItem component it matches the snapshot when car is already saved 1`] = `
<div
  className="favourites"
>
  <div
    className="favourites__wrapper"
  >
    <p
      className="favourites__hint is-regular-medium"
    >
      This car is saved in your collection of favourite items. However if you want to remove it click the button below.
    </p>
    <button
      className="button button--is_primary    favourites__button"
      disabled={false}
      type="button"
    >
      remove
    </button>
  </div>
</div>
`;

exports[`CartItem component it matches the snapshot when car is not saved 1`] = `
<div
  className="favourites"
>
  <div
    className="favourites__wrapper"
  >
    <p
      className="favourites__hint is-regular-medium"
    >
      If you like this car, click the button and save it in your collection of favourite items.
    </p>
    <button
      className="button button--is_primary    favourites__button"
      disabled={false}
      type="button"
    >
      save
    </button>
  </div>
</div>
`;

exports[`Favourites component it matches the snapshot when car is already saved 1`] = `
<div
  className="favourites"
>
  <div
    className="favourites__wrapper"
  >
    <p
      className="favourites__hint is-regular-medium"
    >
      This car is saved in your collection of favourite items. However if you want to remove it click the button below.
    </p>
    <button
      className="button button--is_primary    favourites__button"
      disabled={false}
      type="button"
    >
      remove
    </button>
  </div>
</div>
`;

exports[`Favourites component it matches the snapshot when car is not saved 1`] = `
<div
  className="favourites"
>
  <div
    className="favourites__wrapper"
  >
    <p
      className="favourites__hint is-regular-medium"
    >
      If you like this car, click the button and save it in your collection of favourite items.
    </p>
    <button
      className="button button--is_primary    favourites__button"
      disabled={false}
      type="button"
    >
      save
    </button>
  </div>
</div>
`;
